# adtc-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
data/: hrm_training_data.jsonl  hrm_training_data_test.jsonl  hrm_training_data_val.jsonl
data/imci_2022/: README.md  booklet_layout_text.txt  classifications.json  dosing_tables.json  extract_summary.json
data/sft/: general_chat.jsonl  test.jsonl  val.jsonl  val_ood.jsonl
eval/results/: eval_20260710_211253.json  model_sacc.json
eval/scoring/: model_sacc_scorer.py  sacc_scorer.py
eval/tasks/: example_tasks.json  imci_triage.json  imci_vignettes_nl.json
notebooks/: adtc_colab.ipynb
report/: REPORT_TEMPLATE_NOTES.md
report/data/: ram_benchmark.json  ram_crosscheck.json  seff_sperf_calculation.json  thermal_benchmark.json  tps_benchmark.json
scripts/: bench_ram.py  bench_ram_crosscheck.py  bench_thermal.py  bench_tps.py  build_imatrix_calib.py  distill_general_chat.py  export_metrics.py  generate_hrm_training_data.py  generate_sft_data.py  merge_and_quantize.py  parse_imci_booklet.py  train_classifier.py  train_hrm.py  train_lora.py  validate_hrm.py
src/: config.py  main.py
src/core/: __init__.py  agent.py  exceptions.py  lifecycle.py
src/hrm/: __init__.py  decoders.py  dialogue_state.py  encoders.py  expert_policy.py  fast_module.py  model.py  slow_module.py  state_machine.py
src/llm/: __init__.py  client.py  formatter.py  model_manager.py  prompts.py
src/memory/: __init__.py  embeddings.py  schemas.py  (+2 more)
tests/: conftest.py  test_prompts.json
(+57 files in other folders)
